完成 T2.1：新建 mars-cloud-gateway（响应式栈），路由到 UPMS，网关自产错误复用 common 信封
- 路由显式声明（/upms/** -> lb://mars-cloud-upms-service），不开 discovery locator
- WebFlux 侧 ErrorWebExceptionHandler：无路由 63001/404、无实例 63002/503、连接失败 63003/502、
  超时 63004/504，其余按 HTTP 状态码兜底；业务服务的响应原样透传；开发环境回带调试详情
- 32 个契约测试（假上游验证透传与信封；路由表、Nacos 约定、配置卫生、Dockerfile 入口守护）
- verify-e2e.sh 以真进程按「先网关、后 UPMS」验收，含启动顺序回归
- Dockerfile 入口带 --sun-misc-unsafe-memory-access=allow 与 --enable-native-access=ALL-UNNAMED
- LoadBalancer 实例缓存换 Caffeine；公开文档与 .env.example 同步